versions/v2.14/modules/de/pages/rancher-admin/global-configuration/rke1-templates/creator-permissions.adoc
= Berechtigungen für Vorlagenersteller
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/neue-benutzeranleitungen/authentifizierung-berechtigungen-und-globale-konfiguration/über-rke1-vorlagen/erstellerberechtigungen.adoc 
:product-path: rancher-admin/global-configuration/rke1-templates/creator-permissions.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/benutzer/authn-und-authz/verwaltung-der-rollenbasierten-zugriffskontrolle-rbac/global-berechtigungen.adoc
:xref-access-share-rke1-templates: xref:rancher-admin/global-configuration/rke1-templates/access-or-share-templates.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/neue-benutzeranleitungen/authentifizierung-berechtigungen-und-global-konfiguration/verwaltung-der-rollenbasierten-zugriffskontrolle-rbac/global-berechtigungen.adoc 
:xref-access-share-rke1-templates: xref:how-to-guides/neue-benutzeranleitungen/authentifizierung-berechtigungen-und-globale-konfiguration/über-rke1-vorlagen/zugriff-oder-teilen-von-vorlagen.adoc
endif::[]

Administratoren haben die Berechtigung, RKE-Vorlagen zu erstellen, und nur Administratoren können diese Berechtigung anderen Benutzern erteilen.

Für weitere Informationen zu den Berechtigungen von Administratoren siehe die {xref-global-permissions}[Dokumentation zu globalen Berechtigungen].

[#_giving_users_permission_to_create_templates]
== Benutzern die Berechtigung zum Erstellen von Vorlagen erteilen

Vorlagen können nur von Benutzern erstellt werden, die die globale Berechtigung *RKE-Vorlagen erstellen* haben.

Administratoren haben die globale Berechtigung, Vorlagen zu erstellen, und nur Administratoren können diese Berechtigung anderen Benutzern erteilen.

Für Informationen darüber, wie Benutzern das Modifizieren bestehender Vorlagen erlaubt wird, siehe {xref-access-share-rke1-templates}[Vorlagen teilen.]

Administratoren können Benutzern auf zwei Arten die Berechtigung erteilen, RKE-Vorlagen zu erstellen:

* Durch Bearbeiten der Berechtigungen eines <<_allowing_a_user_to_create_templates,einzelnen Benutzers>>
* Durch Ändern der <<_allowing_new_users_to_create_templates_by_default,Standardberechtigungen neuer Benutzer>>

[#_allowing_a_user_to_create_templates]
=== Einem Benutzer das Erstellen von Vorlagen erlauben

Ein Administrator kann einem bestehenden Benutzer die Rolle *RKE-Vorlagen erstellen* individuell zuweisen, indem er die folgenden Schritte ausführt:

. Klicken Sie in der oberen linken Ecke auf *☰ > Benutzer & Authentifizierung*.
. Klicken Sie in der linken Navigationsleiste auf *Benutzer*.
. Wählen Sie den Benutzer aus, den Sie bearbeiten möchten, und klicken Sie auf *⋮ > Konfiguration bearbeiten*.
. Im Abschnitt *Integriert* aktivieren Sie das Kontrollkästchen für die Rolle *Neue RKE-Cluster-Vorlagen erstellen* sowie für alle anderen Rollen, die der Benutzer haben soll. Sie möchten möglicherweise auch das Kontrollkästchen für *RKE-Vorlagenrevisionen erstellen* aktivieren.
. Klicken Sie auf *Speichern*.

*Ergebnis:* Der Benutzer hat die Berechtigung, RKE-Vorlagen zu erstellen.

[#_allowing_new_users_to_create_templates_by_default]
=== Neuen Benutzern standardmäßig das Erstellen von Vorlagen erlauben

Alternativ kann der Administrator allen neuen Benutzern die Standardberechtigung zum Erstellen von RKE-Vorlagen erteilen, indem er die folgenden Schritte ausführt. Dies hat keine Auswirkungen auf die Berechtigungen bestehender Benutzer.

. Klicken Sie in der oberen linken Ecke auf *☰ > Benutzer & Authentifizierung*.
. Klicken Sie in der linken Navigationsleiste auf *Rollenvorlagen*.
. Wählen Sie *Neue RKE-Cluster-Vorlagen erstellen* aus und klicken Sie auf *⋮ > Konfiguration bearbeiten*.
. Wählen Sie die Option *Ja: Standardrolle für neue Benutzer*.
. Klicken Sie auf *Speichern*.
. Wenn Sie möchten, dass neue Benutzer auch RKE-Vorlagenrevisionen erstellen können, aktivieren Sie diese Rolle ebenfalls als Standard.

*Ergebnis:* Jeder neue Benutzer, der in dieser Rancher-Installation erstellt wird, kann RKE-Vorlagen erstellen. Bestehende Benutzer erhalten diese Berechtigung nicht.

[#_revoking_permission_to_create_templates]
=== Berechtigung zum Erstellen von Vorlagen widerrufen

Administratoren können einem Benutzer die Berechtigung zum Erstellen von Vorlagen mit den folgenden Schritten entfernen. Hinweis: Administratoren haben die volle Kontrolle über alle Ressourcen, unabhängig davon, ob feingranulare Berechtigungen ausgewählt sind.

. Klicken Sie in der oberen linken Ecke auf *☰ > Benutzer & Authentifizierung*.
. Klicken Sie in der linken Navigationsleiste auf *Benutzer*.
. Wählen Sie den Benutzer aus, für den Sie die Berechtigungen bearbeiten möchten, und klicken Sie auf *⋮ > Konfiguration bearbeiten*.
. Im Abschnitt *Integriert* deaktivieren Sie das Kontrollkästchen für *RKE-Vorlagen erstellen* und *RKE-Vorlagenrevisionen erstellen,* falls zutreffend. In diesem Abschnitt können Sie den Benutzer wieder zu einem Standardbenutzer machen oder ihm andere Berechtigungen zuweisen.
. Klicken Sie auf *Speichern*.

*Ergebnis:* Der Benutzer kann keine RKE-Vorlagen erstellen.
